<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/lay2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/lay13"
                        android:layout_width="fill_parent"
                        android:layout_height="0dip"
                        android:layout_weight=".3"
                        android:orientation="vertical"
                        android:gravity="bottom"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/change_pass_mesg"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:layout_marginBottom="20dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lay14"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:passwordToggleEnabled="true"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp">

                            <EditText android:id="@+id/input_old_pass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:hint="@string/old_pass"
                                android:background="@drawable/edit_text"
                                android:layout_marginLeft="25dp"
                                android:layout_marginRight="25dp"
                                android:maxLength="8"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:passwordToggleEnabled="true"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp">

                            <EditText android:id="@+id/input_new_pass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:hint="@string/new_pass"
                                android:background="@drawable/edit_text"
                                android:layout_marginLeft="25dp"
                                android:layout_marginRight="25dp"
                                android:maxLength="8" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lay3"
                    android:layout_width="fill_parent"
                    android:orientation="vertical"
                    android:gravity="center|center_horizontal"
                    android:layout_height="100dp">

                    <Button
                        android:id="@+id/btn_Submit"
                        android:layout_width="225dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textColor="#ffffff"
                        android:background="@drawable/button_style"
                        android:text="@string/submit"
                        android:textSize="16dp" />

                </LinearLayout>


            </LinearLayout>

        </ScrollView>
</LinearLayout>