<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/lay1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lay7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/landing_top_strip" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lay4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="175dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/landing_client_logo"
                        android:layout_gravity="bottom"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lay5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="155dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/mobi_remit_logo"
                        android:layout_gravity="bottom" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay2"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lay13"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight=".75"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/login_header" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay14"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/input_customer_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapCharacters"
                        android:hint="@string/username_hint"
                        android:textSize="16sp"
                        android:background="@drawable/edit_text"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:maxLength="15"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textSize="16sp"
                        android:background="@drawable/edit_text"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:maxLength="8"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay3"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:gravity="top|center_horizontal">

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:background="@drawable/button_style"
                android:text="@string/login"
                android:textSize="18dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"></View>

            <TextView
                android:id="@+id/txt_not_registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtView_registered"
                android:background="?android:attr/selectableItemBackground"
                android:layout_centerInParent="true"
                android:clickable="true"
                android:text="@string/label_not_registerd"
                android:padding="5dp"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>